--- a/view/products/tapasFundas.html
+++ b/view/products/tapasFundas.html
@@ -14,14 +14,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="../../index.html">taller de bela</a></h1>
+							<h1><a href="../../index.html">Talleres <span>belas</span></a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="../../index.html">Menu</a></li>
+											<li><a href="../../index.html">Inicio</a></li>
 											<li><a href="../quienesSomos.html">Quienes somos</a></li>
 											<li><a href="../serviciosProductos.html">Servicios y productos</a></li>
 											<li><a href="../contacto.html">Contacto</a></li>
@@ -55,7 +55,6 @@
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</footer>
