--- a/view/serviciosProductos.html
+++ b/view/serviciosProductos.html
@@ -14,14 +14,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="../index.html">taller de bela</a></h1>
+							<h1><a href="../index.html">Talleres <span>belas</span></a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="../index.html">Menu</a></li>
+											<li><a href="../index.html">Inicio</a></li>
 											<li><a href="quienesSomos.html">Quienes somos</a></li>
 											<li><a href="serviciosProductos.html">Servicios y productos</a></li>
 											<li><a href="contacto.html">Contacto</a></li>
@@ -34,7 +34,7 @@
 
 				<!-- Main -->
 					<article id="main">
-						<header>
+						<header class="headerProductosYServicios">
 							<h2>Servicios y productos</h2>
 						</header>
 						<section class="wrapper style5">
@@ -44,7 +44,7 @@
                                 
                                 <section id="two" class="wrapper alt style5">
                                     <section class="spotlight">
-                                        <div class="image"><img src="../images/box1.png" alt="" /></div><div class="content">
+                                        <div class="image"><img src="../images/box1redux.png" alt="Caja" /></div><div class="content">
                                             <h2>Tapas Fundas Para Bins - Tambores</h2>
                                             <p>Este producto permite prescindir por completo del papel film o alusa para almacenar de forma hermética los productos. Puede ser elastizado con sistema de ajuste manual con cordón, depende del gusto y la necesidad de cada cliente.</p>
                                             <ul class="actions stacked">
@@ -53,38 +53,38 @@
                                         </div>
                                     </section>
                                     <section class="spotlight">
-                                        <div class="image"><img src="../images/pic02.jpg" alt="" /></div><div class="content">
-                                            <h2>almohadones</h2>
-                                            <p>Breve descripción del producto.</p>
+                                        <div class="image"><img src="../images/pillows.jpg" alt="Almohadones" /></div><div class="content">
+                                            <h2>Cojines y almohadones</h2>
+                                            <p>Descripción del producto.</p>
                                             <ul class="actions stacked">
-                                                <li><a href="#" class="button fit primary">Saber más</a></li>
+                                                <li><a href="products/cojinesYAlmohadones.html" class="button fit primary">Saber más</a></li>
                                             </ul>
                                         </div>
                                     </section>
                                     <section class="spotlight">
-                                        <div class="image"><img src="../images/pic03.jpg" alt="" /></div><div class="content">
-                                            <h2>cojines</h2>
-                                            <p>Breve descripción del producto.</p>
-                                            <ul class="actions stacked">
-                                                <li><a href="#" class="button fit primary">Saber más</a></li>
-                                            </ul>
-                                        </div>
-                                    </section>
-                                    <section class="spotlight">
-                                        <div class="image"><img src="../images/pic03.jpg" alt="" /></div><div class="content">
+                                        <div class="image"><img src="../images/tableCloth.jpg" alt="Mantel" /></div><div class="content">
                                             <h2>manteles</h2>
-                                            <p>Breve descripción del producto.</p>
+                                            <p>Descripción del producto.</p>
                                             <ul class="actions stacked">
-                                                <li><a href="#" class="button fit primary">Saber más</a></li>
+                                                <li><a href="products/mateles.html" class="button fit primary">Saber más</a></li>
                                             </ul>
                                         </div>
                                     </section>
                                     <section class="spotlight">
-                                        <div class="image"><img src="../images/pic03.jpg" alt="" /></div><div class="content">
-                                            <h2>juegos de cama</h2>
-                                            <p>Breve descripción del producto.</p>
+                                        <div class="image"><img src="../images/bed.jpg" alt="Juego de cama" /></div><div class="content">
+                                            <h2>juegos de camas</h2>
+                                            <p>Descripción del producto.</p>
                                             <ul class="actions stacked">
-                                                <li><a href="#" class="button fit primary">Saber más</a></li>
+                                                <li><a href="products/juegoDeCamas.html" class="button fit primary">Saber más</a></li>
+                                            </ul>
+                                        </div>
+									</section>
+									<section class="spotlight">
+                                        <div class="image"><img src="../images/curtain.jpg" alt="Cortinas" /></div><div class="content">
+                                            <h2>Cortinas</h2>
+                                            <p>Descripción del producto.</p>
+                                            <ul class="actions stacked">
+                                                <li><a href="products/cortinas.html" class="button fit primary">Saber más</a></li>
                                             </ul>
                                         </div>
                                     </section>
@@ -99,7 +99,6 @@
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</footer>
