--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1913,7 +1913,7 @@
 
 			#banner,
 			.wrapper.style4 {
-				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../../images/banner.jpg")'));
+				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../../images/bg.jpg")'));
 				background-position: center center;
 				background-repeat: no-repeat;
 				background-size: cover;
